fix text selection on leader schedule page due to hammerjs wrapping

--- a/src/features/LeaderSchedule/Slots/slots.module.css
+++ b/src/features/LeaderSchedule/Slots/slots.module.css
@@ -10,6 +10,10 @@
   touch-action: none;
 
   & * {
-    touch-action:none
+    touch-action: none;
+  }
+
+  span {
+    user-select: text;
   }
 }
